--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,6 +6,8 @@
     android:background="@drawable/bg_cadastro"
     tools:context=".ui.view.activity.RegisterActivity">
 
+    <include layout="@layout/app_bar"/>
+
     <RelativeLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -28,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/activity_vertical_margin_big"
                 android:text="@string/txt_intro_registro"
-                style="@style/TxtTitleForms"/>
+                style="@style/TextLarge.Bold.Brown"/>
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -39,8 +41,9 @@
                 <EditText
                     android:id="@+id/edtNome"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    style="@style/TxtHint"
+                    android:layout_height="@dimen/common_input_height"
+                    style="@style/TextBig.Regular.Brown"
+                    android:paddingLeft="@dimen/activity_horizontal_margin"
                     android:inputType="textPersonName"
                     android:hint="@string/hint_nome"
                     android:background="@drawable/rounded_edt_padrao"/>
@@ -56,9 +59,10 @@
                 <EditText
                     android:id="@+id/edtLogin"
                     android:layout_width="0dp"
-                    android:layout_height="40dp"
+                    android:layout_height="@dimen/common_input_height"
                     android:layout_weight="1"
-                    style="@style/TxtHint"
+                    style="@style/TextBig.Regular.Brown"
+                    android:paddingLeft="@dimen/activity_horizontal_margin"
                     android:inputType="textEmailAddress"
                     android:hint="@string/hint_email"
                     android:background="@drawable/rounded_edt_padrao"/>
@@ -75,8 +79,9 @@
                 <Button
                     android:id="@+id/btnDataNasc"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    style="@style/TxtHint"
+                    android:layout_height="@dimen/common_input_height"
+                    style="@style/TextBig.Regular.Brown"
+                    android:paddingLeft="@dimen/activity_horizontal_margin"
                     android:hint="@string/hint_data_nasc"
                     android:background="@drawable/rounded_edt_padrao"
                     android:textAlignment="textStart"/>
@@ -93,7 +98,7 @@
                 <Spinner
                     android:id="@+id/spinnerGenero"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
+                    android:layout_height="@dimen/common_input_height"
                     android:popupBackground="@drawable/rounded_edt_padrao"
                     android:popupElevation="5dp">
 
@@ -108,9 +113,10 @@
 
                 <Button
                     android:layout_width="match_parent"
-                    android:layout_height="45dp"
+                    android:layout_height="@dimen/common_btn_height"
                     android:text="@string/btn_registro"
-                    style="@style/TxtBtn"
+                    style="@style/TextBig.Bold.White"
+                    android:textAllCaps="false"
                     android:id="@+id/btnEnviar"
                     android:background="@drawable/rounded_btn_padrao"/>
 
@@ -119,9 +125,5 @@
         </LinearLayout>
 
     </RelativeLayout>
-
-
-    <include layout="@layout/app_bar"/>
-
 
 </RelativeLayout>
