--- a/app/src/main/res/layout/app_bar_dash_board.xml
+++ b/app/src/main/res/layout/app_bar_dash_board.xml
@@ -1,45 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context=".ui.view.activity.DashBoardActivity">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <RelativeLayout
-        android:id="@+id/containerHeader"
+    <include layout="@layout/app_bar" />
+
+    <FrameLayout
+        android:id="@+id/frame_dash"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/nav_header_size"
-            android:theme="@style/AppTheme.AppBarOverlay"
-            android:background="@color/colorPrimaryDark">
-
-            <TextView
-                android:id="@+id/HeaderTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/app_name"
-                style="@style/TxtBtn"
-                android:textSize="22sp"
-                />
-
-        </android.support.v7.widget.Toolbar>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/nav_header_shadow_size"
-            android:background="@drawable/toolbar_dropshadow"
-            android:layout_below="@+id/toolbar"/>
-
-
-    </RelativeLayout>
+        android:layout_height="match_parent" />
 
     <include layout="@layout/content_dash_board" />
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
