--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -3,20 +3,21 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_cadastro"
     tools:context=".ui.view.fragment.LoginFragment">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorBg"
+        android:background="@drawable/bg_transparent_yellow"
         android:weightSum="2">
 
         <LinearLayout
             android:id="@+id/contentLogo"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2"
+            android:layout_weight="1.2"
             android:layout_margin="@dimen/login_logo_padding"
             android:gravity="center_horizontal|center_vertical">
 
@@ -31,7 +32,8 @@
         <LinearLayout
             android:id="@+id/contentPanel"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="0.8"
             android:layout_marginBottom="@dimen/activity_horizontal_margin"
             android:gravity="center_horizontal">
 
@@ -47,7 +49,7 @@
                     android:id="@+id/contentEdt"
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="@dimen/login_input_height"
                     android:layout_marginBottom="@dimen/activity_vertical_margin_small"
                     android:layout_marginTop="@dimen/activity_vertical_margin_small"
                     android:layout_marginLeft="@dimen/activity_horizontal_margin"
@@ -60,14 +62,16 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="5"
-                        style="@style/TxtHint"
+                        style="@style/TextBig.Bold.Brown"
+                        android:textAllCaps="false"
+                        android:paddingLeft="@dimen/login_padding_inputs"
                         android:inputType="textEmailAddress"
                         android:hint="@string/hint_email"
                         android:background="@drawable/rounded_edt_padrao_login"/>
 
                     <ImageButton
                         android:id="@+id/btnLogin"
-                        android:layout_width="60dp"
+                        android:layout_width="@dimen/login_btn_width"
                         android:layout_height="match_parent"
                         android:background="@drawable/rounded_btn_login"
                         android:src="@drawable/ic_keyboard_arrow_right_white_48dp"/>
@@ -78,7 +82,7 @@
                     android:id="@+id/contentLogin"
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="@dimen/login_input_height"
                     android:layout_marginBottom="@dimen/activity_vertical_margin_small"
                     android:layout_marginTop="@dimen/activity_vertical_margin_small"
                     android:layout_marginLeft="@dimen/activity_horizontal_margin"
@@ -92,16 +96,16 @@
                         android:layout_height="match_parent"
                         android:layout_weight="5"
                         android:text="@string/btn_login_fb"
-                        style="@style/TxtBtn"
+                        style="@style/TextBig.Bold.White"
+                        android:textAllCaps="false"
                         android:paddingLeft="@dimen/login_padding_inputs"
-                        android:textColor="@color/colorWhite"
                         android:id="@+id/btnFacebook"
                         android:textAlignment="textStart"
                         android:background="@android:color/transparent"/>
 
                     <ImageButton
                         android:id="@+id/btnLoginFb"
-                        android:layout_width="60dp"
+                        android:layout_width="@dimen/login_btn_width"
                         android:layout_height="match_parent"
                         android:background="@drawable/rounded_btn_facebook_transparent"
                         android:src="@drawable/ic_keyboard_arrow_right_white_48dp"/>
@@ -122,8 +126,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:text="@string/btn_help"
-                        style="@style/TxtBtnSmall"
-                        android:textColor="@color/colorMarrom"
+                        style="@style/TextMedium.Bold.Brown"
+                        android:textAllCaps="false"
                         android:id="@+id/btnRegistrar"
                         android:background="@android:color/transparent"/>
 
