--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -33,6 +33,11 @@
     <dimen name="beer_vertical_margin">3dp</dimen>
     <dimen name="beer_horizontal_padding">10dp</dimen>
 
+    <!-- TODO: input's size -->
+    <dimen name="login_input_height">60dp</dimen>
+    <dimen name="login_btn_width">60dp</dimen>
+    <dimen name="common_input_height">40dp</dimen>
+    <dimen name="common_btn_height">45dp</dimen>
 
     <!--TODO: Set sizes of fonts-->
     <dimen name="font_small">12sp</dimen>
@@ -48,7 +53,7 @@
 
     <!--TODO: Sizes of nav header -->
     <dimen name="nav_header_size">56dp</dimen>
-    <dimen name="nav_header_shadow_size">8dp</dimen>
+    <dimen name="nav_header_shadow_size">2dp</dimen>
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">270dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
@@ -59,6 +64,9 @@
 
     <!-- TODO: Information bar size -->
     <dimen name="beer_imagesize">70dp</dimen>
+
+    <!-- TODO: container's size -->
+    <dimen name="conteiner_related_height">220dp</dimen>
 
 
 </resources>
