Correções de layout e otimizaçao do MVP

--- a/app/src/main/res/drawable/rounded_btn_facebook.xml
+++ b/app/src/main/res/drawable/rounded_btn_facebook.xml
@@ -16,7 +16,7 @@
     <item android:state_enabled="false">
         <shape android:shape="rectangle" >
             <corners android:radius="40dp" />
-            <solid android:color="@color/colorBlueFbPressed" />
+            <solid android:color="@color/colorBlueFb" />
         </shape>
     </item>
 </selector>
