--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -44,6 +44,7 @@
                     android:layout_height="@dimen/common_input_height"
                     style="@style/TextBig.Regular.Brown"
                     android:paddingLeft="@dimen/activity_horizontal_margin"
+                    android:paddingRight="@dimen/activity_vertical_margin"
                     android:inputType="textPersonName"
                     android:hint="@string/hint_nome"
                     android:background="@drawable/rounded_edt_padrao"/>
@@ -63,6 +64,7 @@
                     android:layout_weight="1"
                     style="@style/TextBig.Regular.Brown"
                     android:paddingLeft="@dimen/activity_horizontal_margin"
+                    android:paddingRight="@dimen/activity_vertical_margin"
                     android:inputType="textEmailAddress"
                     android:hint="@string/hint_email"
                     android:background="@drawable/rounded_edt_padrao"/>
@@ -82,6 +84,7 @@
                     android:layout_height="@dimen/common_input_height"
                     style="@style/TextBig.Regular.Brown"
                     android:paddingLeft="@dimen/activity_horizontal_margin"
+                    android:paddingRight="@dimen/activity_vertical_margin"
                     android:hint="@string/hint_data_nasc"
                     android:background="@drawable/rounded_edt_padrao"
                     android:textAlignment="textStart"/>
@@ -99,8 +102,9 @@
                     android:id="@+id/spinnerGenero"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/common_input_height"
-                    android:popupBackground="@drawable/rounded_edt_padrao"
-                    android:popupElevation="5dp">
+                    android:popupBackground="@drawable/rounded_spinner_padrao"
+                    android:popupElevation="5dp"
+                    style="@style/TextBig.Regular.Brown">
 
                 </Spinner>
 
