--- a/app/src/main/res/drawable/view_bottom_divider_borwn.xml
+++ b/app/src/main/res/drawable/view_bottom_divider_borwn.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <item>
+        <color android:color="@color/colorBgLight"></color>
+    </item>
+
     <item
         android:bottom="1dp"
         android:left="-2dp"
