--- a/app/src/main/res/layout/item_cervejaria.xml
+++ b/app/src/main/res/layout/item_cervejaria.xml
@@ -5,9 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    android:background="@color/colorBgLight"
-    android:id="@+id/cnItem"
-    android:weightSum="2">
+    android:background="@drawable/view_bottom_divider_borwn"
+    android:paddingBottom="@dimen/activity_vertical_margin_minimum"
+    android:id="@+id/cnItem">
 
     <LinearLayout
         android:id="@+id/cnImage"
@@ -31,7 +31,6 @@
         android:orientation="vertical"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/view_bottom_divider_borwn"
         android:layout_weight="1.4"
         android:gravity="center_vertical"
         android:paddingTop="@dimen/activity_vertical_margin"
@@ -63,12 +62,6 @@
             android:text="@string/brewery_qty"
             style="@style/TextRegular.Regular.Brown"/>
 
-        <TextView
-            android:id="@+id/txCountStyles"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/brewery_styles"
-            style="@style/TextRegular.Regular.Brown"/>
 
     </LinearLayout>
 
